@@ -2,6 +2,10 @@
 SimpleMail Open Source - ChangeLog
 ----------------------------------
 
+2007-02-14  Bernd Gollesch <bgollesch@sime.at>
+	* amiga-mui/mailtreelistclass-new.c: Don't show autospam marked messages in bold.
+	  Added more muikeys for keyboard navigation.
+
 2007-02-13  Bernd Gollesch <bgollesch@sime.at>
 	* amiga-mui/mailtreelistclass-new.c: Added IDCMP_INTUITICKS to the mousemove
 	  EventHandler to keep scrolling in selected mode while the mouse is outside
